css/styles.css
@charset "utf-8";
/* CSS Document */

body,td,th,p{
  font-family: Arial, Helvetica, sans-serif;
  font-size: 10pt;
  color: #333;
  line-height: 1.5;
}
body {
  background-color: #fdfdfd;
  margin: 0;
  position:relative;
}
ul, li {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 10pt;
  color: #333;
}
a {
  color: orange;
  text-decoration: none;
}
a:hover, a:focus {
  color: #3397db;
  text-decoration: none;
}
a img{
  border: none 0px #fff;
}
h1, h2, h3, h4, h5, h6 {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0 0 20px;
}
article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summery {
  display: block;
}

#maincontent {
  background-color: #f3f3f3;
  height: 100%;
  display: flex;
  flex-direction: column;
}

#footer {
  background-color: #444;
  color: #f3f3f3;
  font-size: 8pt;
  letter-spacing: 1px;
  padding: 25px;
  text-align: center;
  text-transform: uppercase;
}
/* ====================== Navigation ====================== */
nav {
  width: 100%;
  height: 80px;
  background-color: #252831;
  text-align:center;
}
nav h1 {
  margin: auto;
}
nav h1 a {
  color: #fff;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}
#breadcrumb {
    padding: 10px 40px 16px;
    list-style: none;
    background-color: #eee;
    font-size: 17px;
    margin: 0;
}

/* Display list items side by side */
#breadcrumb li {
    display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
#breadcrumb li+li:before {
    padding: 8px;
    color: black;
    content: "/\00a0";
}

/* Add a color to all links inside the list */
#breadcrumb li a {
    color: #444;
    text-decoration: none;
}

/* Add a color on mouse-over */
#breadcrumb li a:hover {
    color: #01447e;
    text-decoration: underline;
}
/* ====================== Map ====================== */
#map {
  height: 400px;
  width: 100%;
  background-color: #ccc;
}

#maincontent #map-container {
  height: 400px;
  width: 100%;
  background-color: #ccc;
}

#maincontent-top > #map-container, #maincontent-top > #map-container > #map {
  height: 200px;
}

.inside #map-container {
  background: blue none repeat scroll 0 0;
  width: 100%;
}

@media (min-width:700px)  { 
  #maincontent-top > #map-container, #maincontent-top > #map-container > #map {
    height: 660px;
  }
 }

/* ====================== Restaurant Filtering ====================== */
.filter-options {
  display: flex;
  width: 100%;
  background-color: #185d8c;
  flex-grow: 1;
  flex-direction: column;
  align-items: center;
}
.filter-options h2 {
  color: white;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1;
  margin: 0 20px;
}
.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: Arial,sans-serif;
  font-size: 11pt;
  height: 35px;
  letter-spacing: 0;
  margin: 10px;
  padding: 0 10px;
  width: 90%;
}

.column {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media (min-width:481px)  { 
  .filter-options {
    flex-direction: row;
  }
  .filter-options select {
    display: flex;
    flex-grow: 1;
  }
 }

/* ====================== Restaurant Listing ====================== */
#restaurants-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  background-color: #f3f3f3;
  list-style: outside none none;
  margin: 0;
  padding: 30px 15px 60px;
  text-align: center;
}
#restaurants-list li {
  background-color: #fff;
  border: 2px solid #ccc;
  font-family: Arial,sans-serif;
  min-height: 380px;
  padding: 0 30px 25px;
  text-align: left;
  width: 270px;
  margin: 10px;
  display: flex;
  flex-direction: column;
}

#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  width: 100%;
}

#restaurants-list li h1 {
  color: #444;
  font-family: Arial,sans-serif;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase;
}
#restaurants-list p {
  margin: 0;
  font-size: 11pt;
}
#restaurants-list li a {
  background-color: #444;
  color: orange;
  border-bottom: 3px solid #eee;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

/* ====================== Restaurant Details ====================== */

.inside header {
  width: 100%;
}

.inside #map {
  background-color: #ccc;
  width: 100%;
}

#restaurant-name {
  color: #444;
  font-family: Arial,sans-serif;
  font-size: 20pt;
  font-weight: 200;
  letter-spacing: 0;
  margin: 15px 0 30px;
  text-transform: uppercase;
  line-height: 1.1;
}
#restaurant-img {
  width: 90%;
}
#restaurant-address {
  font-size: 12pt;
  margin: 10px 0px;
}
#restaurant-cuisine {
  background-color: #333;
  color: #ddd;
  font-size: 12pt;
  font-weight: 300;
  letter-spacing: 10px;
  margin: 0 0 20px;
  padding: 2px 0;
  text-align: center;
  text-transform: uppercase;
  width: 90%;
}
#restaurant-container, #reviews-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
}

#reviews-container h2 {
  color: #444;
  font-size: 24pt;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt;
}
#reviews-list {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}
#reviews-list li {
  background-color: #fff;
    border: 2px solid #f3f3f3;
  display: block;
  list-style-type: none;
  margin: 0 0 30px;
  overflow: hidden;
  padding: 0 20px 20px;
  position: relative;
  width: 85%;
}
#reviews-list li p {
  margin: 0 0 10px;
}

#restaurant-hours {
  align-items: flex-start;
}
#restaurant-hours td {
  color: #666;
}

#maincontent-top {
  display: flex;
  flex-direction: column;
}

@media (min-width:700px)  { 
  #maincontent-top {
    flex-direction: row-reverse;
  }
}

